// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments error 1`] = `
<View>
  <Text>
    Unable to load comments
  </Text>
  <Text>
    You must have a network connection to view and post comments. Please check your connection and retry.
  </Text>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Retry"
    accessibilityTraits="button"
  >
    <Text
      title="Retry"
    >
      Retry
    </Text>
  </View>
</View>
`;

exports[`disabled comments 1`] = `
<View>
  <Text>
    Comments for this article have been turned off
  </Text>
  <Text>
    For more details, please see our 
    

    <Text
      accessibilityRole="link"
    >
      community guidelines
    </Text>
  </Text>
</View>
`;

exports[`enabled comments 1`] = `
<View>
  <Text>
    123 comments
  </Text>
  <Text>
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
    >
      here
    </Text>
  </Text>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="View comments"
    accessibilityTraits="button"
  >
    <Text
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`single comment 1`] = `
<View>
  <Text>
    1 comment
  </Text>
  <Text>
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
    >
      here
    </Text>
  </Text>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="View comments"
    accessibilityTraits="button"
  >
    <Text
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`zero comments 1`] = `
<View>
  <Text>
    0 comments
  </Text>
  <Text>
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
    >
      here
    </Text>
  </Text>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Post a comment"
    accessibilityTraits="button"
  >
    <Text
      title="Post a comment"
    >
      Post a comment
    </Text>
  </View>
</View>
`;
